--- a/fastly.toml
+++ b/fastly.toml
@@ -1,19 +1,15 @@
-manifest_version = 2
+# This file describes a Fastly Compute package. To learn more visit:
+# https://www.fastly.com/documentation/reference/compute/fastly-toml
 
-name = "mocktioneer"
-description = "Mocktioneer: a mock OpenRTB bidder for testing"
+authors = ["aram@stackpop.com"]
+cloned_from = "https://github.com/fastly/compute-starter-kit-rust-default"
+description = ""
 language = "rust"
-version = "0.1.0"
-
-[scripts]
-build = """
-    cargo build --bin mocktioneer --release --target wasm32-wasip1 --color always
-"""
+manifest_version = 3
+name = "mocktioneer"
+service_id = ""
 
 [local_server]
-  # This section is used by `fastly compute serve` for local dev.
-  # It won't affect deployed behavior.
-  port = 7676
 
-# No backends required; this is an originless mock bidder.
-
+[scripts]
+  build = "cargo build --profile release"
