--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,9 @@ codegen-units = 1
 lto = "fat"
 
 [dependencies]
-fastly = "0.11.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 rand = "0.8"
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+fastly = "0.11.0"
