--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ lto = "fat"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 rand = "0.8"
+handlebars = "4"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 fastly = "0.11.0"
