--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,10 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 rand = "0.8"
 handlebars = "4"
+log = "0.4"
+log-fastly = "0.9"
+fern = "0.6"
+chrono = { version = "0.4" }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 fastly = "0.11.0"
