--- a/crates/mocktioneer-adapter-fastly/fastly.toml
+++ b/crates/mocktioneer-adapter-fastly/fastly.toml
@@ -6,7 +6,7 @@ cloned_from = "https://github.com/fastly/compute-starter-kit-rust-default"
 description = ""
 language = "rust"
 manifest_version = 3
-name = "mocktioneer"
+name = "mocktioneer-adapter-fastly"
 service_id = ""
 
 [local_server]
