--- a/crates/mocktioneer-core/Cargo.toml
+++ b/crates/mocktioneer-core/Cargo.toml
@@ -5,12 +5,16 @@ edition = "2021"
 publish = false
 
 [dependencies]
-anyedge-core = { path = "../../../anyedge/crates/anyedge-core" }
-handlebars = "6"
-log = { version = "0.4", features = ["serde"] }
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-serde_repr = "0.1"
-toml = "0.9"
-uuid = { version = "1", features = ["v7"] }
-validator = { version = "0.20", features = ["derive"] }
+anyedge-core = { workspace = true }
+async-trait = { workspace = true }
+handlebars = { workspace = true }
+log = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
+serde_repr = { workspace = true }
+toml = { workspace = true }
+uuid = { workspace = true }
+validator = { workspace = true }
+
+[dev-dependencies]
+futures = { workspace = true }
