--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,20 +12,20 @@ codegen-units = 1
 lto = "fat"
 
 [workspace.dependencies]
-anyedge-core = { path = "../anyedge/crates/anyedge-core" }
-anyedge-adapter-fastly = { path = "../anyedge/crates/anyedge-adapter-fastly", default-features = false }
 anyedge-adapter-cloudflare = { path = "../anyedge/crates/anyedge-adapter-cloudflare", default-features = false }
+anyedge-adapter-fastly = { path = "../anyedge/crates/anyedge-adapter-fastly", default-features = false }
+anyedge-cli = { path = "../anyedge/crates/anyedge-cli" }
+anyedge-core = { path = "../anyedge/crates/anyedge-core" }
 async-trait = "0.1"
+fastly = "0.11"
+futures = { version = "0.3", features = ["std", "executor"] }
 handlebars = "6"
 log = { version = "0.4", features = ["serde"] }
-simple_logger = "4"
+mocktioneer-core = { path = "crates/mocktioneer-core" }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 serde_repr = "0.1"
 toml = "0.9"
 uuid = { version = "1", features = ["v7"] }
 validator = { version = "0.20", features = ["derive"] }
-fastly = "0.11"
 worker = { version = "0.6", features = ["http"] }
-futures = { version = "0.3", features = ["std", "executor"] }
-mocktioneer-core = { path = "crates/mocktioneer-core" }
