--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ members = [
   "crates/mocktioneer-core",
   "crates/mocktioneer-adapter-fastly",
   "crates/mocktioneer-adapter-cloudflare",
+  "crates/mocktioneer-adapter-axum",
 ]
 resolver = "2"
 
@@ -14,6 +15,7 @@ lto = "fat"
 [workspace.dependencies]
 anyedge-adapter-cloudflare = { path = "../anyedge/crates/anyedge-adapter-cloudflare", default-features = false }
 anyedge-adapter-fastly = { path = "../anyedge/crates/anyedge-adapter-fastly", default-features = false }
+anyedge-adapter-axum = { path = "../anyedge/crates/anyedge-adapter-axum", default-features = false }
 anyedge-cli = { path = "../anyedge/crates/anyedge-cli" }
 anyedge-core = { path = "../anyedge/crates/anyedge-core" }
 async-trait = "0.1"
@@ -22,10 +24,15 @@ futures = { version = "0.3", features = ["std", "executor"] }
 handlebars = "6"
 log = { version = "0.4", features = ["serde"] }
 mocktioneer-core = { path = "crates/mocktioneer-core" }
+anyhow = "1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+simple_logger = "5"
 serde_repr = "0.1"
+tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 toml = "0.9"
+axum = "0.8"
 uuid = { version = "1", features = ["v7"] }
 validator = { version = "0.20", features = ["derive"] }
 worker = { version = "0.6", features = ["http"] }
+tracing = "0.1"
