--- a/crates/mocktioneer-core/Cargo.toml
+++ b/crates/mocktioneer-core/Cargo.toml
@@ -7,12 +7,17 @@ publish = false
 [dependencies]
 anyedge-core = { workspace = true }
 async-trait = { workspace = true }
+base64 = { workspace = true }
+ed25519-dalek = { workspace = true }
+futures-util = { workspace = true }
 handlebars = { workspace = true }
 log = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 serde_repr = { workspace = true }
+thiserror = { workspace = true }
 toml = { workspace = true }
+url = { workspace = true }
 uuid = { workspace = true }
 validator = { workspace = true }
 
