--- a/crates/mocktioneer-core/Cargo.toml
+++ b/crates/mocktioneer-core/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 publish = false
 
 [dependencies]
-anyedge-core = { workspace = true }
+edgezero-core = { workspace = true }
 async-trait = { workspace = true }
 base64 = { workspace = true }
 ed25519-dalek = { workspace = true }
