--- a/crates/mocktioneer-core/Cargo.toml
+++ b/crates/mocktioneer-core/Cargo.toml
@@ -8,6 +8,7 @@ publish = false
 edgezero-core = { workspace = true }
 async-trait = { workspace = true }
 base64 = { workspace = true }
+phf = { workspace = true }
 ed25519-dalek = { workspace = true }
 futures-util = { workspace = true }
 handlebars = { workspace = true }
