--- a/docs/package.json
+++ b/docs/package.json
@@ -2,14 +2,23 @@
   "name": "mocktioneer-docs",
   "version": "1.0.0",
   "description": "Documentation site for Mocktioneer",
-  "license": "ISC",
+  "license": "MIT",
   "type": "module",
   "scripts": {
     "dev": "vitepress dev",
     "build": "vitepress build",
-    "preview": "vitepress preview"
+    "preview": "vitepress preview",
+    "format": "prettier --check .",
+    "format:write": "prettier --write .",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "devDependencies": {
+    "@types/node": "^24.10",
+    "eslint": "^9.17.0",
+    "@eslint/js": "^9.17.0",
+    "typescript-eslint": "^8.18.2",
+    "prettier": "^3.4.2",
     "vitepress": "^1.5.0"
   }
 }
