Setup Cloudflare Workers deployment via EdgeZero - Configure wrangler.toml for worker-build - Add lib.rs with #[event(fetch)] handler for WASM - Update Cargo.toml with cdylib lib target - Add Playwright tests for both Axum and Cloudflare adapters - Add GitHub Actions workflow for Cloudflare deployment - Update .gitignore for .wrangler and build folders - Add tests/playwright README with adapter usage Requires EdgeZero fix/web-time-wasm branch for WASM time compatibility. Requires CLOUDFLARE_API_TOKEN and CLOUDFLARE_ACCOUNT_ID secrets. Closes #22

--- a/crates/mocktioneer-adapter-cloudflare/Cargo.toml
+++ b/crates/mocktioneer-adapter-cloudflare/Cargo.toml
@@ -8,6 +8,10 @@ publish = false
 name = "mocktioneer-adapter-cloudflare"
 path = "src/main.rs"
 
+[lib]
+crate-type = ["cdylib", "rlib"]
+path = "src/lib.rs"
+
 [features]
 default = ["cloudflare"]
 cloudflare = ["dep:edgezero-adapter-cloudflare"]
