--- a/crates/mocktioneer-adapter-cloudflare/wrangler.toml
+++ b/crates/mocktioneer-adapter-cloudflare/wrangler.toml
@@ -6,3 +6,4 @@ compatibility_date = "2023-05-01"
 # Requires `worker-build` during local dev/deploy:
 # cargo install worker-build
 command = "worker-build --release"
+cwd = "crates/mocktioneer-adapter-cloudflare"
