--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -9,17 +9,13 @@ on:
         description: "Git ref to build (branch, tag, or SHA). Defaults to the default branch."
         required: false
         type: string
-      tag:
-        description: "Custom image tag (e.g. rc-1, staging)"
-        required: false
-        type: string
 
 permissions:
   contents: read
   packages: write
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
+  group: ${{ github.workflow }}-${{ github.event.release.tag_name || github.run_id }}
   cancel-in-progress: true
 
 jobs:
@@ -30,6 +26,10 @@ jobs:
       - uses: actions/checkout@v4
         with:
           ref: ${{ inputs.ref || github.ref }}
+
+      - name: Get Rust version from .tool-versions
+        id: rust
+        run: echo "version=$(grep '^rust' .tool-versions | awk '{print $2}')" >> $GITHUB_OUTPUT
 
       - name: Log in to GHCR
         uses: docker/login-action@v3
@@ -44,9 +44,9 @@ jobs:
         with:
           images: ghcr.io/stackpop/mocktioneer
           tags: |
-            type=raw,value=${{ inputs.tag }},enable=${{ inputs.tag != '' }}
+            type=raw,value=${{ github.event.release.tag_name }},enable=${{ github.event_name == 'release' }}
+            type=raw,value=${{ inputs.ref || github.ref_name }},enable=${{ github.event_name == 'workflow_dispatch' }}
             type=sha,prefix=sha-
-            type=ref,event=branch
             type=semver,pattern=v{{version}}
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
@@ -62,5 +62,6 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           platforms: linux/amd64
+          build-args: RUST_VERSION=${{ steps.rust.outputs.version }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
