--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,11 +18,11 @@ async-trait = "0.1"
 axum = "0.8"
 base64 = "0.22"
 ed25519-dalek = "2.1"
-edgezero-adapter-axum = { git = "ssh://git@github.com/stackpop/edgezero.git", branch = "fix/web-time-wasm", package = "edgezero-adapter-axum", default-features = false }
-edgezero-adapter-cloudflare = { git = "ssh://git@github.com/stackpop/edgezero.git", branch = "fix/web-time-wasm", package = "edgezero-adapter-cloudflare", default-features = false }
-edgezero-adapter-fastly = { git = "ssh://git@github.com/stackpop/edgezero.git", branch = "fix/web-time-wasm", package = "edgezero-adapter-fastly", default-features = false }
-edgezero-cli = { git = "ssh://git@github.com/stackpop/edgezero.git", branch = "fix/web-time-wasm", package = "edgezero-cli" }
-edgezero-core = { git = "ssh://git@github.com/stackpop/edgezero.git", branch = "fix/web-time-wasm", package = "edgezero-core" }
+edgezero-adapter-axum = { git = "ssh://git@github.com/stackpop/edgezero.git", branch = "main", package = "edgezero-adapter-axum", default-features = false }
+edgezero-adapter-cloudflare = { git = "ssh://git@github.com/stackpop/edgezero.git", branch = "main", package = "edgezero-adapter-cloudflare", default-features = false }
+edgezero-adapter-fastly = { git = "ssh://git@github.com/stackpop/edgezero.git", branch = "main", package = "edgezero-adapter-fastly", default-features = false }
+edgezero-cli = { git = "ssh://git@github.com/stackpop/edgezero.git", branch = "main", package = "edgezero-cli" }
+edgezero-core = { git = "ssh://git@github.com/stackpop/edgezero.git", branch = "main", package = "edgezero-core" }
 fastly = "0.11.9"
 futures = { version = "0.3", features = ["std", "executor"] }
 futures-util = "0.3.31"
