--- a/crates/mocktioneer-adapter-cloudflare/Cargo.toml
+++ b/crates/mocktioneer-adapter-cloudflare/Cargo.toml
@@ -15,13 +15,14 @@ path = "src/lib.rs"
 
 [features]
 default = ["cloudflare"]
-cloudflare = ["dep:edgezero-adapter-cloudflare"]
+cloudflare = ["edgezero-adapter-cloudflare/cloudflare"]
 
 [dependencies]
-edgezero-adapter-cloudflare = { workspace = true, optional = true }
+edgezero-adapter-cloudflare = { workspace = true }
+edgezero-core = { workspace = true }
 mocktioneer-core = { workspace = true }
-worker = { workspace = true }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 edgezero-adapter-cloudflare = { workspace = true, features = ["cloudflare"] }
 edgezero-core = { workspace = true }
+worker = { workspace = true }
